policies/kyverno/tests/resources/pod-latest-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-latest-fail
spec:
  containers:
    - name: app
      image: nginx:latest
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
