policies/kyverno/tests/resources/pod-securitycontext-missing-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-security-fail
spec:
  containers:
    - name: app
      image: ghcr.io/company/app:1.0.0
